--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -28,19 +28,27 @@
   color: var(--second-text-color);
 }
 .team__list {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  @media screen and(min-width:768px) {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
   margin-right: -30px;
   margin-bottom: -30px;
 }
 .team__item {
-  flex-basis: calc((100% - 4 * 30px) / 4);
   margin-right: 30px;
   margin-bottom: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+
+  @media screen and(min-width:768px) {
+    flex-basis: calc((100% - 2 * 30px) / 2);
+  }
+  @media screen and(min-width:1200px) {
+    flex-basis: calc((100% - 4 * 30px) / 4);
+  }
 }
 
 .team__item-content {
