--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,17 +3,30 @@
   padding-bottom: 60px;
   background-color: var(--background-color);
 }
-
+.footer__info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .footer__logo {
-  display: block;
+  display: flex;
+
   margin-bottom: 20px;
   color: var(--main-title-color);
+  padding-left: 100px;
+  @media screen and(min-width:1200px) {
+    padding-left: 20px;
+  }
 }
 .footer__list {
   font-family: Roboto;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
+  text-align: center;
+  @media screen and(min-width:1200px) {
+    text-align: start;
+  }
 }
 .footer__item:not(:last-child) {
   margin-bottom: 9px;
@@ -41,12 +54,31 @@
 
 .footer__container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
+  }
+}
+.footer-tablet {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 60px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0px;
+  }
 }
 .footer-title {
   font-family: Roboto;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+  text-align: center;
+  @media screen and(min-width:1200px) {
+    text-align: start;
+  }
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 20px;
@@ -54,8 +86,20 @@
 
 .footer-social {
   display: flex;
+  align-items: center;
   flex-direction: column;
-  margin-left: 70px;
+  justify-content: center;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  @media screen and (min-width: 768px) {
+    margin-top: 0;
+    margin-left: 164px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 70px;
+    margin-right: 85px;
+    margin-bottom: 0;
+  }
 }
 
 .footer-social__list {
@@ -84,11 +128,16 @@
   fill: var(--main-title-color);
 }
 
-.footer-subscribe {
-  margin-left: 85px;
-}
 .footer__input-wrap {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
+    align-items: start;
+    justify-content: start;
+  }
 }
 .footer-subscribe__btn {
   width: 200px;
@@ -106,6 +155,14 @@
 }
 .footer__input {
   width: 358px;
+  @media screen and (min-width: 768px) {
+    width: 450px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+    margin-bottom: 0;
+  }
+
   height: 50px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -119,4 +176,6 @@
   letter-spacing: 0.03em;
   padding-left: 16px;
   color: rgba(255, 255, 255, 0.6);
+
+  margin-bottom: 20px;
 }
