--- a/css/main.css
+++ b/css/main.css
@@ -145,8 +145,8 @@ body {
 }
 
 .modal {
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   position: absolute;
   background-color: var(--main-title-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -156,6 +156,13 @@ body {
   transform: scale(1) skew(0) translate(-50%, -50%);
   transition: transform 300ms;
   padding: 40px;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .modal-close {
@@ -187,14 +194,24 @@ body {
 }
 
 .modal__title {
-  width: 448px;
-  height: 23px;
+  width: 370px;
+  height: 60px;
   font-family: Roboto;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
+  text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 10px;
   color: var(--first-text-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal__title {
+    line-height: 1.15;
+    text-align: none;
+    width: 448px;
+    height: 23px;
+  }
 }
 
 .modal-form-field {
@@ -204,13 +221,19 @@ body {
 .modal__input {
   display: block;
   margin-top: 4px;
-  width: 448px;
+  width: 370px;
   height: 40px;
   outline: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 40px;
   padding-right: 25px;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal__input {
+    width: 448px;
+  }
 }
 
 .modal-icon {
@@ -229,13 +252,19 @@ body {
 
 .modal__text {
   margin-top: 4px;
-  width: 448px;
+  width: 370px;
   height: 120px;
   outline: none;
   resize: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding: 12px 16px;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal__text {
+    width: 448px;
+  }
 }
 
 .modal__input:focus,
@@ -256,8 +285,8 @@ body {
 
 .modal__check-text {
   font-family: Roboto;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: var(--second-text-color);
   display: flex;
@@ -266,6 +295,13 @@ body {
   justify-content: center;
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal__check-text {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .modal__check-text::before {
@@ -1186,10 +1222,7 @@ body {
   cursor: pointer;
   border-radius: 4px;
   border: 0;
-  padding-top: 6px;
-  padding-bottom: 6px;
-  padding-left: 22px;
-  padding-right: 22px;
+  padding: 6px 22px;
 }
 
 .portfolio-btn:focus, .portfolio-btn:hover {
@@ -1219,15 +1252,26 @@ body {
 
 .portfolio__list-btn {
   display: flex;
-  justify-content: center;
-  margin-bottom: 56px;
+  flex-wrap: wrap;
+  justify-content: start;
+  margin-right: -8px;
+  margin-bottom: -15px;
 }
 
-.portfolio__item-btn:not(:last-child) {
+@media screen and (min-width: 768px) {
+  .portfolio__list-btn {
+    justify-content: center;
+  }
+}
+
+.portfolio__item-btn {
+  flex-basis: calc((100% - 4 * 15px) / 4);
   margin-right: 8px;
+  margin-bottom: 15px;
 }
 
 .portfolio__list {
+  margin-top: 40px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -1236,9 +1280,21 @@ body {
 }
 
 .portfolio__item {
-  flex-basis: calc((100% - 3 * 30px) / 3);
+  flex-basis: calc((100% - 1 * 30px) / 1);
   margin-bottom: 30px;
   margin-right: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio__item {
+    flex-basis: calc((100% - 2 * 30px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio__item {
+    flex-basis: calc((100% - 3 * 30px) / 3);
+  }
 }
 
 .portfolio__item:hover, .portfolio__item:focus {
