--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -18,8 +18,12 @@
 }
 
 .modal {
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
+  }
   position: absolute;
   background-color: var(--main-title-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -60,11 +64,18 @@
   color: var(--second-text-color);
 }
 .modal__title {
-  width: 448px;
-  height: 23px;
+  width: 370px;
+  height: 60px;
   font-family: Roboto;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
+  text-align: center;
+  @media screen and (min-width: 1200px) {
+    line-height: 1.15;
+    text-align: none;
+    width: 448px;
+    height: 23px;
+  }
   letter-spacing: 0.03em;
   margin-bottom: 10px;
   color: var(--first-text-color);
@@ -75,9 +86,13 @@
 .modal__input {
   display: block;
   margin-top: 4px;
-  width: 448px;
+  width: 370px;
   height: 40px;
   outline: none;
+  @media screen and (min-width: 1200px) {
+    width: 448px;
+  }
+
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 40px;
@@ -97,10 +112,13 @@
 }
 .modal__text {
   margin-top: 4px;
-  width: 448px;
+  width: 370px;
   height: 120px;
   outline: none;
   resize: none;
+  @media screen and (min-width: 1200px) {
+    width: 448px;
+  }
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding: 12px 16px;
@@ -121,8 +139,9 @@
 }
 .modal__check-text {
   font-family: Roboto;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
+
   letter-spacing: 0.03em;
   color: var(--second-text-color);
   display: flex;
@@ -131,6 +150,10 @@
   justify-content: center;
   margin-top: 20px;
   margin-bottom: 20px;
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 
   &::before {
     content: '';
