--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -17,10 +17,7 @@
   cursor: pointer;
   border-radius: 4px;
   border: 0;
-  padding-top: 6px;
-  padding-bottom: 6px;
-  padding-left: 22px;
-  padding-right: 22px;
+  padding: 6px 22px;
 
   &:focus,
   &:hover {
@@ -52,12 +49,19 @@
 
 .portfolio__list-btn {
   display: flex;
-  justify-content: center;
-  margin-bottom: 56px;
-  // margin-right: -8px;
+  flex-wrap: wrap;
+  justify-content: start;
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+  }
+  margin-right: -8px;
+  margin-bottom: -15px;
 }
-.portfolio__item-btn:not(:last-child) {
+
+.portfolio__item-btn {
+  flex-basis: calc((100% - 4 * 15px) / 4);
   margin-right: 8px;
+  margin-bottom: 15px;
 }
 // .portfolio__item-btn {
 //   flex-basis: calc((100% - 3 * 8px) / 3);
@@ -65,6 +69,7 @@
 // }
 
 .portfolio__list {
+  margin-top: 40px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -73,7 +78,13 @@
 }
 
 .portfolio__item {
-  flex-basis: calc((100% - 3 * 30px) / 3);
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 2 * 30px) / 2);
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 3 * 30px) / 3);
+  }
+  flex-basis: calc((100% - 1 * 30px) / 1);
   margin-bottom: 30px;
   margin-right: 30px;
   &:hover,
