--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,21 @@ body {
   margin: -1px;
 }
 
+@media screen and (max-width: 1200px) {
+  .visually-hiddens {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+  }
+}
+
 .container {
   width: 100%;
   padding-left: 15px;
@@ -1255,19 +1270,38 @@ body {
   flex-wrap: wrap;
   justify-content: start;
   margin-right: -8px;
-  margin-bottom: -15px;
+  margin-bottom: -8px;
 }
 
 @media screen and (min-width: 768px) {
   .portfolio__list-btn {
     justify-content: center;
+    flex-wrap: nowrap;
   }
 }
 
-.portfolio__item-btn {
-  flex-basis: calc((100% - 4 * 15px) / 4);
-  margin-right: 8px;
-  margin-bottom: 15px;
+@media screen and (min-width: 1200px) {
+  .portfolio__list-btn {
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .portfolio__item-btn {
+    margin-bottom: 8px;
+    flex-basis: calc((100% - 4 * 8px) / 4);
+    margin-right: 8px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio__item-btn {
+    flex-wrap: nowrap;
+  }
+  .portfolio__item-btn:not(:last-child) {
+    margin-right: 8px;
+  }
 }
 
 .portfolio__list {
