--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -83,6 +83,13 @@
 
 .portfolio__list {
   margin-top: 40px;
+  @media screen and (min-width: 768px) {
+    margin-top: 30px;
+    justify-content: start;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-top: 50px;
+  }
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
