--- a/css/main.css
+++ b/css/main.css
@@ -359,9 +359,28 @@ body {
 
 .header {
   background-color: var(--main-title-color);
-  padding-top: 24px;
-  padding-bottom: 24px;
   border-bottom: 1px solid #ececec;
+}
+
+@media screen and (min-width: 480px) {
+  .header {
+    padding-top: 14px;
+    padding-bottom: 14px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
 }
 
 .header__nav {
@@ -1226,6 +1245,7 @@ body {
 }
 
 .portfolio-btn {
+  width: 100%;
   font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
@@ -1269,8 +1289,13 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: start;
-  margin-right: -8px;
-  margin-bottom: -8px;
+}
+
+@media screen and (max-width: 768px) {
+  .portfolio__list-btn {
+    margin-bottom: -15px;
+    margin-right: -8px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -1289,8 +1314,7 @@ body {
 
 @media screen and (max-width: 768px) {
   .portfolio__item-btn {
-    margin-bottom: 8px;
-    flex-basis: calc((100% - 4 * 8px) / 4);
+    margin-bottom: 15px;
     margin-right: 8px;
   }
 }
