--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -6,6 +6,8 @@
   }
 }
 .portfolio-btn {
+  width: 100%;
+
   font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
@@ -51,12 +53,14 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: start;
+  @media screen and (max-width: 768px) {
+    margin-bottom: -15px;
+    margin-right: -8px;
+  }
   @media screen and (min-width: 768px) {
     justify-content: center;
     flex-wrap: nowrap;
   }
-  margin-right: -8px;
-  margin-bottom: -8px;
   @media screen and (min-width: 1200px) {
     flex-wrap: nowrap;
     justify-content: center;
@@ -65,8 +69,7 @@
 
 .portfolio__item-btn {
   @media screen and (max-width: 768px) {
-    margin-bottom: 8px;
-    flex-basis: calc((100% - 4 * 8px) / 4);
+    margin-bottom: 15px;
     margin-right: 8px;
   }
   @media screen and (min-width: 768px) {
